--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "intervention/image-laravel": "^1.4",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.17",
         "laravel/tinker": "^2.9",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
